fix sidebar covering content

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -6,7 +6,7 @@
 #sidebar {
     height: 100%;
     width: max-content;
-    pointer-events: none;
+    pointer-events: none !important;
 }
 
 .container {
